--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,27 +2,27 @@ apply plugin: 'com.android.application'
 
 //for retrolambda & java 8
 
-//========================================
-buildscript {
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
-        classpath 'me.tatarka:gradle-retrolambda:3.2.1'
-    }
-}
-
-repositories {
-    mavenCentral()
-    jcenter()
-}
-apply plugin: 'me.tatarka.retrolambda'
-retrolambda {
-    jdk System.getenv("JAVA_HOME")
-}
-//========================================
+//========================================\/
+//buildscript {
+//    repositories {
+//        mavenCentral()
+//        jcenter()
+//    }
+//    dependencies {
+//        classpath 'com.android.tools.build:gradle:1.3.0'
+//        classpath 'me.tatarka:gradle-retrolambda:3.2.1'
+//    }
+//}
+//
+//repositories {
+//    mavenCentral()
+//    jcenter()
+//}
+//apply plugin: 'me.tatarka.retrolambda'
+//retrolambda {
+//    jdk System.getenv("JAVA_HOME")
+//}
+//========================================/\
 
 android {
     compileSdkVersion 23
@@ -41,18 +41,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    //========================================
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    //========================================
+    //========================================\/
+//    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_1_8
+//        targetCompatibility JavaVersion.VERSION_1_8
+//    }
+    //========================================/\
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:22.2.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'me.neavo:volley:2014.12.09'
+    compile 'com.google.android.gms:play-services:8.4.0'
 }
