--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+//plugin for dagger
+apply plugin: 'com.neenbedankt.android-apt'
 
 //for retrolambda & java 8
 
@@ -59,4 +61,11 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.squareup:otto:1.3.8'
+
+    //dagger2
+    compile 'com.google.dagger:dagger:2.0.2'
+    apt 'com.google.dagger:dagger-compiler:2.0.2'
+
+    //annotation for generated class by dagger
+    provided 'javax.annotation:jsr250-api:1.0'
 }
