--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
+        android:name=".app.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -21,7 +22,7 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyCcSsdm8D_QRTP4WImC-_p6CPGaSNmJkPo" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".presentation.Activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
